[package]
name = "rmc2vdb"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0"
fastanvil = "0.32"
fastnbt = "2.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.102"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
